# transx

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  noxfile.py  pyproject.toml  requirements-translate.txt
.github/workflows/: benchmark.yml  codecov.yml  mr-test.yml  python-publish.yml
benchmark/: benchmark-data-py3.9.json
examples/: basic_usage.py  demo.py  run_workflow.py
examples/locales/: messages.pot
examples/locales/en_US/LC_MESSAGES/: messages.mo  messages.po
examples/locales/es_ES/LC_MESSAGES/: messages.mo  messages.po
examples/locales/fr_FR/LC_MESSAGES/: messages.mo  messages.po
examples/locales/ja_JP/LC_MESSAGES/: messages.mo  messages.po
examples/locales/ko_KR/LC_MESSAGES/: messages.mo  messages.po
examples/locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
examples/workflow/: 01_extract_messages.py  02_update_translations.py  03_compile_translations.py  03_translate_messages.py  04_compile_translations.py  04_translate_messages.py  common.py  demo.py
examples/workflow/locales/: messages.pot
examples/workflow/locales/es_ES/LC_MESSAGES/: messages.mo  messages.po
examples/workflow/locales/fr_FR/LC_MESSAGES/: messages.mo  messages.po
examples/workflow/locales/ja_JP/LC_MESSAGES/: messages.mo  messages.po
examples/workflow/locales/ko_KR/LC_MESSAGES/: messages.mo  messages.po
examples/workflow/locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
gh-pages/: benchmark-data-py3.8.json
locales/: messages.pot
locales/en_US/LC_MESSAGES/: messages.po
locales/ja_JP/LC_MESSAGES/: messages.po
locales/ko_KR/LC_MESSAGES/: messages.po
locales/zh_CN/LC_MESSAGES/: messages.po
nox_actions/: codetest.py  lint.py  release.py  utils.py
tests/: conftest.py  test_api.py  test_app.py  test_cli.py  test_context_manager.py  test_core_loading.py  test_exceptions.py  test_filesystem.py  test_imports.py  test_message.py  test_mo.py  test_po.py  test_translation.py
tests/benchmarks/: test_performance.py
tests/data/: test.mo  test.po
tests/data/locales/: messages.pot
tests/data/locales/zh_CN/: messages.mo
tests/data/locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
transx/: __init__.py  cli.py  compat.py  constants.py  core.py  exceptions.py  extractors.py  filesystem.py  translate.py  translation_catalog.py  translators.py
transx/api/: __init__.py  interpreter.py  locale.py  message.py  mo.py  po.py  pot.py  translate.py  translation_catalog.py  translators.py
transx/context/: manager.py
transx/formats/: __init__.py  mo.py  po.py  pot.py
transx/internal/: compat.py  filesystem.py
