[tool.poetry]
name = "transx"
version = "0.1.0"
description = "A lightweight, zero-dependency Python library for internationalization and translation management."
authors = ["longhao <hal.long@outlook.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=2.7,<4.0"

[tool.poetry.scripts]
transx = "transx.cli:cli"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "transx/__version__.py"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.nox
    | \.venv
    | _build
    | buck-out
    | build
    | transx/_vendor
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["transx", "tests"]
filter_files = true
known_first_party = "transx"

# Enforce import section headers.
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
import_heading_firstparty = "Import local modules"

force_sort_within_sections = true
force_single_line = true

# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = []


[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "I",   # isort
    "Q",   # flake8-quotes
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
]

ignore = [
    "B904",  # raise-without-from
    "F821",  # undefined-name - 用于unicode类型
    "F541",  # f-string
    "SIM108", # if-else-block-instead-of-if-exp
    "PTH",    # 所有pathlib相关规则
    "UP",     # 所有升级建议
    "ARG001", # 未使用的函数参数
    "ARG002", # 未使用的方法参数
    "D100",   # 缺少模块docstring
    "D101",   # 缺少类docstring
    "D102",   # 缺少方法docstring
    "D103",   # 缺少函数docstring
    "D104",   # 缺少包docstring
    "D105",   # 缺少魔术方法docstring
    "D107",   # 缺少__init__ docstring
    "W293",   # 空行中的空格
    "E501",   # 行太长
    "C901",   # 函数太复杂
    "E402",   # 模块导入不在顶部
    "RUF005", # 考虑使用列表展开语法
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = ["D"]
"noxfile.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["transx"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

exclude = [
    ".git",
    ".nox",
    ".tox",
    ".venv",
    "build",
    "dist",
    "venv",
]
